--- a/bmi-calculator.html
+++ b/bmi-calculator.html
@@ -4020,6 +4020,261 @@
                 "footer.links.disclaimer": "Tuyên bố Miễn trừ Trách nhiệm",
                 "footer.links.terms": "Điều khoản Dịch vụ",
                 "footer.copyright": "© 2025 LollyPoPDF. Tất cả các quyền được bảo lưu."
+            },
+            is: {
+                "nav.home": "Heim",
+                "nav.about": "Um okkur",
+                "nav.tools": "Verkfæri",
+                "nav.contact": "Hafa samband",
+                "hero.title": "BMI Reiknivél og Heilbrigt Þarma",
+                "hero.description": "Reiknaðu BMI þitt í rauntíma, fáðu persónulegar heilsuráðleggingar og lærðu hvernig þú getur bætt þarmaheilbrigði þitt. Öll vinnsla fer fram staðbundið með fullri einkalífi.",
+                "howto.title": "Hvernig á að nota heilsuverkfærið",
+                "howto.step1.title": "Reiknaðu BMI þitt",
+                "howto.step1.description": "Sláðu inn hæð og þyngd þína með annað hvort metra- eða bresku einingum. Verkfærið mun strax reikna BMI þitt og sýna heilsuflokk þinn.",
+                "howto.step2.title": "Notaðu raddstýringu",
+                "howto.step2.description": "Smelltu á hljóðnemahnappinn og talaðu mælingar þínar. Verkfærið mun þekkja rödd þína og setja gildin inn sjálfkrafa.",
+                "howto.step3.title": "Fáðu heilsuráðleggingar",
+                "howto.step3.description": "Byggt á BMI þínu, fáðu persónulegar ráðleggingar um að bæta heilsu þína, með sérstakri áherslu á þarmaheilbrigði og heildarheilbrigði.",
+                "howto.step4.title": "Lærðu um þarmaheilbrigði",
+                "howto.step4.description": "Kannaðu safn okkar af þarmaheilbrigðisráðum og lífstílsráðleggingum til að bæta meltingarheilbrigði þitt og heildarvelferð.",
+                "tool.title": "BMI Reiknivél og Heilbrigt Þarma",
+                "tool.tabs.bmi": "BMI Reiknivél",
+                "tool.tabs.gut": "Heilbrigt Þarma",
+                "tool.bmi.weight": "Þyngd:",
+                "tool.bmi.height": "Hæð:",
+                "tool.bmi.calculate": "Reikna BMI",
+                "tool.bmi.reset": "Endurstilla",
+                "tool.tips.title": "Persónulegar heilsuráðleggingar",
+                "tool.voice.title": "Raddstýring",
+                "tool.voice.description": "Smelltu á hljóðnemann og talaðu mælingar þínar",
+                "tool.voice.start": "Byrja raddinntak",
+                "tool.voice.stop": "Stoppa raddinntak",
+                "tool.voice.pause": "Gera hlé á úttaki",
+                "tool.voice.resume": "Halda áfram úttaki",
+                "tool.gut.title": "Bættu þarmaheilbrigði þitt",
+                "tool.gut.description": "Heilbrigt þarma er nauðsynlegt fyrir heildarheilbrigði. Hér eru nokkrar ráðleggingar til að bæta meltingarheilbrigði þitt:",
+                "footer.follow": "FYLGDU OKKUR",
+                "footer.categories": "Vinsælar flokkar",
+                "footer.categories.pdf": "PDF verkfæri",
+                "footer.categories.image": "Myndaverkfæri",
+                "footer.categories.text": "Textaverkfæri",
+                "footer.categories.av": "Hljóð-/myndbandaverkfæri",
+                "footer.categories.web": "Vefþróunaraðalverkfæri",
+                "footer.categories.calc": "Reiknivélarverkfæri",
+                "footer.categories.util": "Gagnleg verkfæri",
+                "footer.categories.color": "Litverkfæri",
+                "footer.quicklinks": "Flýtilekkjur",
+                "footer.links.tools": "Öll verkfæri",
+                "footer.links.faq": "Algengar spurningar",
+                "footer.links.contact": "Hafa samband",
+                "footer.links.privacy": "Meðferðarstefna",
+                "footer.links.disclaimer": "Fyrirvari",
+                "footer.links.terms": "Þjónustuskilmálar",
+                "footer.copyright": "© 2025 LollyPoPDF. Öll réttindi áskilin."
+            },
+            no: {
+                "nav.home": "Hjem",
+                "nav.about": "Om oss",
+                "nav.tools": "Verktøy",
+                "nav.contact": "Kontakt",
+                "hero.title": "BMI Kalkulator & Sunn Tarm",
+                "hero.description": "Beregn BMI-en din i sanntid, få personlig helseråd og lær hvordan du kan forbedre tarmhelsen din. All behandling skjer lokalt med fullstendig personvern.",
+                "howto.title": "Hvordan bruke helseverktøyet",
+                "howto.step1.title": "Beregn BMI-en din",
+                "howto.step1.description": "Skriv inn høyden og vekten din ved å bruke enten metriske eller imperiale enheter. Verktøyet vil umiddelbart beregne BMI-en din og vise helsekategorien din.",
+                "howto.step2.title": "Bruk stemmekontroll",
+                "howto.step2.description": "Klikk på mikrofonknappen og snakk målingene dine. Verktøyet vil gjenkjenne stemmen din og skrive inn verdiene automatisk.",
+                "howto.step3.title": "Få helseråd",
+                "howto.step3.description": "Basert på BMI-en din, motta personlige råd for å forbedre helsen din, med spesielt fokus på tarmhelse og generell velvære.",
+                "howto.step4.title": "Lær om tarmhelse",
+                "howto.step4.description": "Utforsk vår samling av tarmhelsetips og livsstilsanbefalinger for å forbedre fordøyelseshelsen og generell velvære.",
+                "tool.title": "BMI Kalkulator & Sunn Tarm",
+                "tool.tabs.bmi": "BMI Kalkulator",
+                "tool.tabs.gut": "Sunn Tarm",
+                "tool.bmi.weight": "Vekt:",
+                "tool.bmi.height": "Høyde:",
+                "tool.bmi.calculate": "Beregn BMI",
+                "tool.bmi.reset": "Tilbakestill",
+                "tool.tips.title": "Personlige helsetips",
+                "tool.voice.title": "Stemmekontroll",
+                "tool.voice.description": "Klikk på mikrofonen og snakk målingene dine",
+                "tool.voice.start": "Start stemmeinndata",
+                "tool.voice.stop": "Stopp stemmeinndata",
+                "tool.voice.pause": "Sett utdata på pause",
+                "tool.voice.resume": "Fortsett utdata",
+                "tool.gut.title": "Forbedre tarmhelsen din",
+                "tool.gut.description": "En sunn tarm er avgjørende for generell velvære. Her er noen tips for å forbedre fordøyelseshelsen din:",
+                "footer.follow": "FØLG OSS",
+                "footer.categories": "Populære kategorier",
+                "footer.categories.pdf": "PDF-verktøy",
+                "footer.categories.image": "Bildeverktøy",
+                "footer.categories.text": "Tekstverktøy",
+                "footer.categories.av": "Lyd-/videoverktøy",
+                "footer.categories.web": "Webutviklerverktøy",
+                "footer.categories.calc": "Kalkulatorverktøy",
+                "footer.categories.util": "Nytteverktøy",
+                "footer.categories.color": "Fargeverktøy",
+                "footer.quicklinks": "Hurtiglenker",
+                "footer.links.tools": "Alle verktøy",
+                "footer.links.faq": "Ofte stilte spørsmål",
+                "footer.links.contact": "Kontakt",
+                "footer.links.privacy": "Personvernregler",
+                "footer.links.disclaimer": "Ansvarsfraskrivelse",
+                "footer.links.terms": "Tjenestevilkår",
+                "footer.copyright": "© 2025 LollyPoPDF. Alle rettigheter reservert."
+            },
+            sv: {
+                "nav.home": "Hem",
+                "nav.about": "Om oss",
+                "nav.tools": "Verktyg",
+                "nav.contact": "Kontakt",
+                "hero.title": "BMI Kalkylator & Hälsosam Tarm",
+                "hero.description": "Beräkna ditt BMI i realtid, få personliga hälsoråd och lär dig hur du kan förbättra din tarmhälsa. All bearbetning sker lokalt med fullständigt integritet.",
+                "howto.title": "Hur man använder hälsoverktyget",
+                "howto.step1.title": "Beräkna ditt BMI",
+                "howto.step1.description": "Ange din längd och vikt med hjälp av antingen metriska eller imperiala enheter. Verktyget kommer omedelbart att beräkna ditt BMI och visa din hälsokategori.",
+                "howto.step2.title": "Använd röststyrning",
+                "howto.step2.description": "Klicka på mikrofonknappen och tala dina mätningar. Verktyget kommer att känna igen din röst och mata in värdena automatiskt.",
+                "howto.step3.title": "Få hälsoråd",
+                "howto.step3.description": "Baserat på ditt BMI, få personliga råd för att förbättra din hälsa, med särskilt fokus på tarmhälsa och allmänt välbefinnande.",
+                "howto.step4.title": "Lär dig om tarmhälsa",
+                "howto.step4.description": "Utforska vår samling av tarmhälsotips och livsstilsrekommendationer för att förbättra din matsmältningshälsa och allmänt välbefinnande.",
+                "tool.title": "BMI Kalkylator & Hälsosam Tarm",
+                "tool.tabs.bmi": "BMI Kalkylator",
+                "tool.tabs.gut": "Hälsosam Tarm",
+                "tool.bmi.weight": "Vikt:",
+                "tool.bmi.height": "Längd:",
+                "tool.bmi.calculate": "Beräkna BMI",
+                "tool.bmi.reset": "Återställ",
+                "tool.tips.title": "Personliga hälsotips",
+                "tool.voice.title": "Röststyrning",
+                "tool.voice.description": "Klicka på mikrofonen och tala dina mätningar",
+                "tool.voice.start": "Starta röstinmatning",
+                "tool.voice.stop": "Stoppa röstinmatning",
+                "tool.voice.pause": "Pausa utdata",
+                "tool.voice.resume": "Återuppta utdata",
+                "tool.gut.title": "Förbättra din tarmhälsa",
+                "tool.gut.description": "En hälsosam tarm är avgörande för allmänt välbefinnande. Här är några tips för att förbättra din matsmältningshälsa:",
+                "footer.follow": "FÖLJ OSS",
+                "footer.categories": "Populära kategorier",
+                "footer.categories.pdf": "PDF-verktyg",
+                "footer.categories.image": "Bildverktyg",
+                "footer.categories.text": "Textverktyg",
+                "footer.categories.av": "Ljud-/videoverktyg",
+                "footer.categories.web": "Webbutvecklarverktyg",
+                "footer.categories.calc": "Kalkylatorverktyg",
+                "footer.categories.util": "Verktyg för verktyg",
+                "footer.categories.color": "Färgverktyg",
+                "footer.quicklinks": "Snabblänkar",
+                "footer.links.tools": "Alla verktyg",
+                "footer.links.faq": "Vanliga frågor",
+                "footer.links.contact": "Kontakt",
+                "footer.links.privacy": "Integritetspolicy",
+                "footer.links.disclaimer": "Ansvarsfriskrivning",
+                "footer.links.terms": "Användarvillkor",
+                "footer.copyright": "© 2025 LollyPoPDF. Alla rättigheter förbehållna."
+            },
+            fi: {
+                "nav.home": "Koti",
+                "nav.about": "Meistä",
+                "nav.tools": "Työkalut",
+                "nav.contact": "Ota yhteyttä",
+                "hero.title": "BMI Laskin & Terve Suoli",
+                "hero.description": "Laske BMI:si reaaliaikaisesti, saa henkilökohtaisia terveysneuvoja ja opi parantamaan suolenterveyttäsi. Kaikki käsittely tapahtuu paikallisesti täydellisen yksityisyyden kanssa.",
+                "howto.title": "Kuinka käyttää terveystyökalua",
+                "howto.step1.title": "Laske BMI:si",
+                "howto.step1.description": "Syötä pituutesi ja painosi käyttämällä joko metrisiä tai imperiaalisia yksiköitä. Työkalu laskee BMI:si välittömästi ja näyttää terveysluokkasi.",
+                "howto.step2.title": "Käytä ääniohjainta",
+                "howto.step2.description": "Napsauta mikrofoninappia ja puhu mittauksesi. Työkalu tunnistaa äänesi ja syöttää arvot automaattisesti.",
+                "howto.step3.title": "Saa terveysneuvoja",
+                "howto.step3.description": "BMI:si perusteella saat henkilökohtaisia neuvoja terveytesi parantamiseen, erityisesti keskittyen suolenterveyteen ja kokonaisvaltaiseen hyvinvointiin.",
+                "howto.step4.title": "Opiskele suolenterveyttä",
+                "howto.step4.description": "Tutustu kokoelmaamme suolenterveysvinkkejä ja elämäntapasuosituksia ruoansulatusterveytesi ja kokonaisvaltaisen hyvinvoinnin parantamiseksi.",
+                "tool.title": "BMI Laskin & Terve Suoli",
+                "tool.tabs.bmi": "BMI Laskin",
+                "tool.tabs.gut": "Terve Suoli",
+                "tool.bmi.weight": "Paino:",
+                "tool.bmi.height": "Pituus:",
+                "tool.bmi.calculate": "Laske BMI",
+                "tool.bmi.reset": "Nollaa",
+                "tool.tips.title": "Henkilökohtaiset terveysvinkit",
+                "tool.voice.title": "Ääniohjain",
+                "tool.voice.description": "Napsauta mikrofonia ja puhu mittauksesi",
+                "tool.voice.start": "Käynnistä äänisyöttö",
+                "tool.voice.stop": "Lopeta äänisyöttö",
+                "tool.voice.pause": "Keskeytä tulostus",
+                "tool.voice.resume": "Jatka tulostusta",
+                "tool.gut.title": "Paranna suolenterveyttäsi",
+                "tool.gut.description": "Terve suoli on välttämätön kokonaisvaltaiselle hyvinvoinnille. Tässä on joitain vinkkejä ruoansulatusterveytesi parantamiseksi:",
+                "footer.follow": "SEURA MEITÄ",
+                "footer.categories": "Suositut kategoriat",
+                "footer.categories.pdf": "PDF-työkalut",
+                "footer.categories.image": "Kuvatyökalut",
+                "footer.categories.text": "Tekstityökalut",
+                "footer.categories.av": "Ääni-/videotyökalut",
+                "footer.categories.web": "Web-kehittäjätyökalut",
+                "footer.categories.calc": "Laskurityökalut",
+                "footer.categories.util": "Aputyökalut",
+                "footer.categories.color": "Värityökalut",
+                "footer.quicklinks": "Pikalinkit",
+                "footer.links.tools": "Kaikki työkalut",
+                "footer.links.faq": "Usein kysytyt kysymykset",
+                "footer.links.contact": "Ota yhteyttä",
+                "footer.links.privacy": "Tietosuojakäytäntö",
+                "footer.links.disclaimer": "Vastuuvapauslauseke",
+                "footer.links.terms": "Käyttöehdot",
+                "footer.copyright": "© 2025 LollyPoPDF. Kaikki oikeudet pidätetään."
+            },
+            cs: {
+                "nav.home": "Domů",
+                "nav.about": "O nás",
+                "nav.tools": "Nástroje",
+                "nav.contact": "Kontakt",
+                "hero.title": "BMI Kalkulačka & Zdravé Střevo",
+                "hero.description": "Vypočítejte své BMI v reálném čase, získejte personalizované zdravotní rady a naučte se, jak zlepšit zdraví svých střev. Veškeré zpracování probíhá lokálně s úplným soukromím.",
+                "howto.title": "Jak používat zdravotní nástroj",
+                "howto.step1.title": "Vypočítejte své BMI",
+                "howto.step1.description": "Zadejte svou výšku a váhu pomocí metrických nebo imperiálních jednotek. Nástroj okamžitě vypočítá vaše BMI a zobrazí vaši zdravotní kategorii.",
+                "howto.step2.title": "Použijte hlasové ovládání",
+                "howto.step2.description": "Klikněte na tlačítko mikrofonu a řekněte své míry. Nástroj rozpozná váš hlas a automaticky zadá hodnoty.",
+                "howto.step3.title": "Získejte zdravotní rady",
+                "howto.step3.description": "Na základě vašeho BMI obdržíte personalizované rady pro zlepšení vašeho zdraví, se zvláštním zaměřením na zdraví střev a celkovou pohodu.",
+                "howto.step4.title": "Naučte se o zdraví střev",
+                "howto.step4.description": "Prozkoumejte naši sbírku tipů pro zdraví střev a doporučení životního stylu pro zlepšení vašeho trávicího zdraví a celkové pohody.",
+                "tool.title": "BMI Kalkulačka & Zdravé Střevo",
+                "tool.tabs.bmi": "BMI Kalkulačka",
+                "tool.tabs.gut": "Zdravé Střevo",
+                "tool.bmi.weight": "Váha:",
+                "tool.bmi.height": "Výška:",
+                "tool.bmi.calculate": "Vypočítat BMI",
+                "tool.bmi.reset": "Resetovat",
+                "tool.tips.title": "Personalizované zdravotní tipy",
+                "tool.voice.title": "Hlasové ovládání",
+                "tool.voice.description": "Klikněte na mikrofon a řekněte své míry",
+                "tool.voice.start": "Spustit hlasový vstup",
+                "tool.voice.stop": "Zastavit hlasový vstup",
+                "tool.voice.pause": "Pozastavit výstup",
+                "tool.voice.resume": "Pokračovat ve výstupu",
+                "tool.gut.title": "Zlepšete zdraví svých střev",
+                "tool.gut.description": "Zdravé střevo je nezbytné pro celkovou pohodu. Zde je několik tipů pro zlepšení vašeho trávicího zdraví:",
+                "footer.follow": "SLEDUJTE NÁS",
+                "footer.categories": "Populární kategorie",
+                "footer.categories.pdf": "PDF nástroje",
+                "footer.categories.image": "Obrázkové nástroje",
+                "footer.categories.text": "Textové nástroje",
+                "footer.categories.av": "Audio/video nástroje",
+                "footer.categories.web": "Webové vývojářské nástroje",
+                "footer.categories.calc": "Kalkulačkové nástroje",
+                "footer.categories.util": "Užitečné nástroje",
+                "footer.categories.color": "Barevné nástroje",
+                "footer.quicklinks": "Rychlé odkazy",
+                "footer.links.tools": "Všechny nástroje",
+                "footer.links.faq": "Často kladené otázky",
+                "footer.links.contact": "Kontakt",
+                "footer.links.privacy": "Zásady ochrany osobních údajů",
+                "footer.links.disclaimer": "Odmítnutí odpovědnosti",
+                "footer.links.terms": "Podmínky služby",
+                "footer.copyright": "© 2025 LollyPoPDF. Všechna práva vyhrazena."
             }
             
         };
