--- a/scientific calculator.html
+++ b/scientific calculator.html
@@ -897,10 +897,10 @@
             
             <nav>
                 <ul>
-                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" class="nav-link" data-i18n="nav.home">Home</a></li>
-                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" class="nav-link" data-i18n="nav.about">About Us</a></li>
-                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
-                    <li><a href="contact.html" class="nav-link" data-i18n="nav.contact">Contact</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdfhome" class="nav-link" data-i18n="nav.home">Home</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdfabout" class="nav-link" data-i18n="nav.about">About Us</a></li>
+                    <li><a href="https://lollypopdf.github.io/LollyPoPdftools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
+                    <li><a href="contact." class="nav-link" data-i18n="nav.contact">Contact</a></li>
                 </ul>
             </nav>
             
@@ -918,10 +918,10 @@
         <!-- Mobile Menu -->
         <div class="mobile-menu" id="mobileMenu">
             <ul>
-                <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" class="nav-link" data-i18n="nav.home">Home</a></li>
-                <li><a href="https://lollypopdf.github.io/LollyPoPdf#about" class="nav-link" data-i18n="nav.about">About Us</a></li>
-                <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
-                <li><a href="contact.html" class="nav-link" data-i18n="nav.contact">Contact</a></li>
+                <li><a href="https://lollypopdf.github.io/LollyPoPdfhome" class="nav-link" data-i18n="nav.home">Home</a></li>
+                <li><a href="https://lollypopdf.github.io/LollyPoPdfabout" class="nav-link" data-i18n="nav.about">About Us</a></li>
+                <li><a href="https://lollypopdf.github.io/LollyPoPdftools" class="nav-link" data-i18n="nav.tools">Tools</a></li>
+                <li><a href="contact." class="nav-link" data-i18n="nav.contact">Contact</a></li>
             </ul>
         </div>
     </header>
@@ -1119,13 +1119,13 @@
             <div class="footer-section">
                 <h4 data-i18n="footer.quicklinks">Quick Links</h4>
                 <ul class="footer-links">
-                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#home" data-i18n="nav.home">Home</a></li>
-                    <li><a href="https://lollypopdf.github.io/LollyPoPdf#tools" data-i18n="footer.links.tools">All Tools</a></li>
-                    <li><a href="faq.html" data-i18n="footer.links.faq">FAQ</a></li>
-                    <li><a href="contact.html" data-i18n="footer.links.contact">Contact</a></li>
-                    <li><a href="privacy-policy.html" data-i18n="footer.links.privacy">Privacy Policy</a></li>
-                    <li><a href="disclaimer.html" data-i18n="footer.links.disclaimer">Disclaimer</a></li>
-                    <li><a href="terms.html" data-i18n="footer.links.terms">Terms of Service</a></li>
+                    <li><a href="https://lollypopdf.com#home" data-i18n="nav.home">Home</a></li>
+                    <li><a href="https://lollypopdf.com#tools" data-i18n="footer.links.tools">All Tools</a></li>
+                    <li><a href="faq." data-i18n="footer.links.faq">FAQ</a></li>
+                    <li><a href="contact." data-i18n="footer.links.contact">Contact</a></li>
+                    <li><a href="privacy-policy." data-i18n="footer.links.privacy">Privacy Policy</a></li>
+                    <li><a href="disclaimer." data-i18n="footer.links.disclaimer">Disclaimer</a></li>
+                    <li><a href="terms." data-i18n="footer.links.terms">Terms of Service</a></li>
                 </ul>
             </div>
         </div>
