--- a/pdf to jpg.html
+++ b/pdf to jpg.html
@@ -1011,7 +1011,7 @@
                     <li><a href=" https://lollypopdf.github.io/LollyPoPdf#pdf-tools" data-i18n="footer.categories.pdf">PDF Tools</a></li>
                     <li><a href=" https://lollypopdf.github.io/LollyPoPdf#image-tools" data-i18n="footer.categories.image">Image Tools</a></li>
                     <li><a href=" https://lollypopdf.github.io/LollyPoPdf#text-tools" data-i18n="footer.categories.text">Text Tools</a></li>
-                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#audiovideo-tools" data-i18n="footer.categories.av">Audio/Video Tools</a></li>
+                    <li><a href=" https://lollypopdf.github.io/LollyPoPdf#audio-video-tools" data-i18n="footer.categories.av">Audio/Video Tools</a></li>
                     <li><a href=" https://lollypopdf.github.io/LollyPoPdf#web developer-tools" data-i18n="footer.categories.web">Web Developer Tools</a></li>
                     <li><a href=" https://lollypopdf.github.io/LollyPoPdf#calculator-tools" data-i18n="footer.categories.calc">Calculator Tools</a></li>
                     <li><a href=" https://lollypopdf.github.io/LollyPoPdf#utility-tools" data-i18n="footer.categories.util">Utility Tools</a></li>
