--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                         <div class="tool-icon">📁</div>
                         <h4 class="tool-title" data-translate="documentConverter">Document Converter</h4>
                         <p class="tool-desc" data-translate="documentConverterDesc">Convert between various document formats</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="document converter.html " class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfLockUnlock" data-tool-name="PDF Lock/Unlock" data-search-keywords="pdf lock, pdf unlock, password protect pdf">
                         <div class="tool-icon">🔐🗝️</div>
