Update and rename Document Converter.html to document converter.html

--- a/document converter.html
+++ b/document converter.html
@@ -961,7 +961,7 @@
                         <li><a href="https://lollypopdf.com#image-tools" data-key="imageTools">Image Tools</a></li>
                         <li><a href="https://lollypopdf.com#text-tools" data-key="textTools">Text Tools</a></li>
                         <li><a href="https://lollypopdf.com#audio-video-tools" data-key="audioVideoTools">Audio/Video Tools</a></li>
-                        <li><a href="https://lollypopdf.com#web developer-tools" data-key="webDeveloperTools">Web Developer Tools</a></li>
+                        <li><a href="https://lollypopdf.github.io/LollyPoPdf#web developer-tools" data-key="webDeveloperTools">Web Developer Tools</a></li>
                         <li><a href="https://lollypopdf.com#calculator-tools" data-key="calculatorTools">Calculator Tools</a></li>
                         <li><a href="https://lollypopdf.com#utility-tools" data-key="utilityTools">Utility Tools</a></li>
                         <li><a href="https://lollypopdf.com#color-tools" data-key="colorTools">Color Tools</a></li>
