--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
                         <div class="tool-icon">🔐🗝️</div>
                         <h4 class="tool-title" data-translate="pdfLockUnlock">PDF Lock/Unlock</h4>
                         <p class="tool-desc" data-translate="pdfLockUnlockDesc">Secure your PDF files with passwords</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="pdf lock unlock.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="eSignPdf" data-tool-name="eSign PDF" data-search-keywords="esign pdf, digital signature, sign pdf">
                         <div class="tool-icon">✍️</div>
