--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,8 @@
                         <a href="https://linkedin.com/company/lollypopdf" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a href="https://twitter.com/lollypopdf" target="_blank"><i class="fab fa-twitter"></i></a>
                         <a href="https://instagram.com/lollypopdf" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://pinterest.com/lollypopdf" target="_blank"><i class="fab fa-pinterest"></i></a>
+                        <a href="https://youtube.com/@lollypopdf" class="social-icon"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.trustpilot.com/review/lollypopdf.com" class="social-icon"><i class="fas fa-star"></i></a>
                     </div>
                 </div>
                 
