--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                         <div class="tool-icon">✍️</div>
                         <h4 class="tool-title" data-translate="eSignPdf">eSign PDF</h4>
                         <p class="tool-desc" data-translate="eSignPdfDesc">Add electronic signatures to your documents</p>
-                        <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                        <a href="esign pdf.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToWord" data-tool-name="PDF to Word" data-search-keywords="pdf to word, convert pdf to word">
                         <div class="tool-icon">📙➡️📘</div>
