--- a/index.html
+++ b/index.html
@@ -855,13 +855,13 @@
                         <a href="esign pdf.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="pdfToWord" data-tool-name="PDF to Word" data-search-keywords="pdf to word, convert pdf to word">
-                        <div class="tool-icon">📙➡️📘</div>
+                        <div class="tool-icon">📕➡️📘</div>
                         <h4 class="tool-title" data-translate="pdfToWord">PDF to Word</h4>
                         <p class="tool-desc" data-translate="pdfToWordDesc">Convert PDF files to editable Word documents</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                     </div>
                     <div class="tool-card" data-tool-id="wordToPdf" data-tool-name="Word to PDF" data-search-keywords="word to pdf, convert word to pdf">
-                        <div class="tool-icon">📘➡️📙</div>
+                        <div class="tool-icon">📘➡️📕</div>
                         <h4 class="tool-title" data-translate="wordToPdf">Word to PDF</h4>
                         <p class="tool-desc" data-translate="wordToPdfDesc">Convert Word documents to PDF format</p>
                         <a href="#" class="use-tool-btn" data-translate="useTool">Use Tool</a>
@@ -1053,6 +1053,12 @@
                     <p class="tool-desc" data-translate="timerStopwatchDesc">Use timer and stopwatch for time management</p>
                     <a href="timer stopwatch.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
+                <div class="tool-card" data-tool-id="screenRecorder" data-tool-name="Advanced Screen Recorder" data-search-keywords="screen recorder, record screen, screen capture, video recording">
+                    <div class="tool-icon">🎬</div>
+                    <h4 class="tool-title" data-translate="screenRecorder">Advanced Screen Recorder</h4>
+                    <p class="tool-desc" data-translate="screenRecorderDesc">Record your screen with high quality and advanced features</p>
+                    <a href="screen-recorder.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+               </div>
             </div>
         </div>
     </section>
