--- a/index.html
+++ b/index.html
@@ -1057,7 +1057,7 @@
                     <div class="tool-icon">🎬</div>
                     <h4 class="tool-title" data-translate="screenRecorder">Advanced Screen Recorder</h4>
                     <p class="tool-desc" data-translate="screenRecorderDesc">Record your screen with high quality and advanced features</p>
-                    <a href="screen recorder.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
+                    <a href="advanced screen recorder.html" class="use-tool-btn" data-translate="useTool">Use Tool</a>
                 </div>
             </div>
         </div>
