--- a/index.html
+++ b/index.html
@@ -7406,7 +7406,7 @@
                 timerStopwatch: "Časovač/Stopky",
                 timerStopwatchDesc: "Používejte časovač a stopky pro správu času",
                 screenRecorder: "Pokročilý Záznam Obrazovky",
-                screenRecorderDesc: "Nahrávejte svou obrazovku ve vysoké kvalitě s pokročilými funkcemi"
+                screenRecorderDesc: "Nahrávejte svou obrazovku ve vysoké kvalitě s pokročilými funkcemi",
                 
                 htmlMinifier: "Minifikátor HTML/CSS/JS",
                 htmlMinifierDesc: "Minifikujte svůj kód pro lepší výkon",
