Update advanced screen recorder.html

--- a/advanced screen recorder.html
+++ b/advanced screen recorder.html
@@ -1170,7 +1170,7 @@
                     <li><a href="https://lollypopdf.com#image-tools" data-i18n="footer.categories.image">Image Tools</a></li>
                     <li><a href="https://lollypopdf.com#text-tools" data-i18n="footer.categories.text">Text Tools</a></li>
                     <li><a href="https://lollypopdf.com#audio-video-tools" data-i18n="footer.categories.av">Audio/Video Tools</a></li>
-                    <li><a href="https://lollypopdf.com#web-developer-tools" data-i18n="footer.categories.web">WebDeveloper Tools</a></li>
+                    <li><a href="https://lollypopdf.com#web-developer-tools" data-i18n="footer.categories.web">Web Developer Tools</a></li>
                     <li><a href="https://lollypopdf.com#calculator-tools" data-i18n="footer.categories.calc">Calculator Tools</a></li>
                     <li><a href="https://lollypopdf.com#utility-tools" data-i18n="footer.categories.util">Utility Tools</a></li>
                     <li><a href="https://lollypopdf.com#color-tools" data-i18n="footer.categories.color">Color Tools</a></li>
@@ -1968,7 +1968,7 @@
                 "footer.categories.image": "Image Tools",
                 "footer.categories.text": "Text Tools",
                 "footer.categories.av": "Audio/Video Tools",
-                "footer.categories.web": "WebDeveloper Tools",
+                "footer.categories.web": "Web Developer Tools",
                 "footer.categories.calc": "Calculator Tools",
                 "footer.categories.util": "Utility Tools",
                 "footer.categories.color": "Color Tools",
@@ -2023,7 +2023,7 @@
                 "footer.categories.image": "Herramientas de Imagen",
                 "footer.categories.text": "Herramientas de Texto",
                 "footer.categories.av": "Herramientas de Audio/Video",
-                "footer.categories.web": "Herramientas WebDesarrollador",
+                "footer.categories.web": "Herramientas Web Desarrollador",
                 "footer.categories.calc": "Herramientas de Calculadora",
                 "footer.categories.util": "Herramientas de Utilidad",
                 "footer.categories.color": "Herramientas de Color",
@@ -2078,7 +2078,7 @@
                 "footer.categories.image": "Outils d'Image",
                 "footer.categories.text": "Outils de Texte",
                 "footer.categories.av": "Outils Audio/Vidéo",
-                "footer.categories.web": "Outils WebDéveloppeur",
+                "footer.categories.web": "Outils Web Développeur",
                 "footer.categories.calc": "Outils de Calculatrice",
                 "footer.categories.util": "Outils d'Utilité",
                 "footer.categories.color": "Outils de Couleur",
@@ -2133,7 +2133,7 @@
                 "footer.categories.image": "Bildwerkzeuge",
                 "footer.categories.text": "Textwerkzeuge",
                 "footer.categories.av": "Audio/Video-Werkzeuge",
-                "footer.categories.web": "WebEntwickler-Werkzeuge",
+                "footer.categories.web": "Web Entwickler-Werkzeuge",
                 "footer.categories.calc": "Rechnerwerkzeuge",
                 "footer.categories.util": "Hilfsprogramme",
                 "footer.categories.color": "Farbwerkzeuge",
@@ -2793,7 +2793,7 @@
                 "footer.categories.image": "Afbeelding Tools",
                 "footer.categories.text": "Tekst Tools",
                 "footer.categories.av": "Audio/Video Tools",
-                "footer.categories.web": "WebDeveloper Tools",
+                "footer.categories.web": "Web Developer Tools",
                 "footer.categories.calc": "Rekenmachine Tools",
                 "footer.categories.util": "Hulpmiddelen",
                 "footer.categories.color": "Kleur Tools",
@@ -3178,7 +3178,7 @@
                 "footer.categories.image": "Alat Gambar",
                 "footer.categories.text": "Alat Teks",
                 "footer.categories.av": "Alat Audio/Video",
-                "footer.categories.web": "Alat WebDeveloper",
+                "footer.categories.web": "Alat Web Developer",
                 "footer.categories.calc": "Alat Kalkulator",
                 "footer.categories.util": "Alat Utilitas",
                 "footer.categories.color": "Alat Warna",
@@ -3233,7 +3233,7 @@
                 "footer.categories.image": "Alat Imej",
                 "footer.categories.text": "Alat Teks",
                 "footer.categories.av": "Alat Audio/Video",
-                "footer.categories.web": "Alat WebPembangun",
+                "footer.categories.web": "Alat Web Pembangun",
                 "footer.categories.calc": "Alat Kalkulator",
                 "footer.categories.util": "Alat Utiliti",
                 "footer.categories.color": "Alat Warna",
@@ -3288,7 +3288,7 @@
                 "footer.categories.image": "Narzędzia obrazów",
                 "footer.categories.text": "Narzędzia tekstowe",
                 "footer.categories.av": "Narzędzia audio/wideo",
-                "footer.categories.web": "Narzędzia webdevelopera",
+                "footer.categories.web": "Narzędzia web developera",
                 "footer.categories.calc": "Narzędzia kalkulatora",
                 "footer.categories.util": "Narzędzia użytkowe",
                 "footer.categories.color": "Narzędzia kolorów",
@@ -3673,7 +3673,7 @@
                 "footer.categories.image": "Bildverktyg",
                 "footer.categories.text": "Textverktyg",
                 "footer.categories.av": "Ljud/videoverktyg",
-                "footer.categories.web": "Webbutvecklarverktyg",
+                "footer.categories.web": "Web butvecklarverktyg",
                 "footer.categories.calc": "Kalkylatorverktyg",
                 "footer.categories.util": "Verktyg för verktyg",
                 "footer.categories.color": "Färgverktyg",
@@ -3728,7 +3728,7 @@
                 "footer.categories.image": "Kuvatyökalut",
                 "footer.categories.text": "Tekstityökalut",
                 "footer.categories.av": "Ääni/videotyökalut",
-                "footer.categories.web": "Web-kehittäjän työkalut",
+                "footer.categories.web": "Web kehittäjän työkalut",
                 "footer.categories.calc": "Laskurityökalut",
                 "footer.categories.util": "Aputyökalut",
                 "footer.categories.color": "Värityökalut",
